# OpenGLTesting

./: a.out  makefile
BetancurDemo/: a.out  makefile
BetancurDemo/lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
BetancurDemo/lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
BetancurDemo/lib/glfw/src/: Makefile  cmake_install.cmake
BetancurDemo/lib/glfw/tests/: Makefile  allocator  clipboard  cmake_install.cmake  cursor  empty  events  gamma  icon  (+13 more)
BetancurDemo/src/: bet_window.c  demo.c  triangle.c
BetancurDemo/src/include/: bet_window.h  opengl.h  triangle.h
MartinDemo/: CMakeLists.txt  main.c
MartinDemo/chapters/: triangle.c  window.c
MartinDemo/lib/glad/src/: glad.c
MartinDemo/lib/glfw/examples/: Makefile  offscreen
MartinDemo/lib/glfw/examples/boing.app/Contents/MacOS/: boing
MartinDemo/lib/glfw/examples/particles.app/Contents/MacOS/: particles
MartinDemo/lib/glfw/examples/wave.app/Contents/MacOS/: wave
MartinDemo/lib/glfw/src/: Makefile
MartinDemo/lib/glfw/tests/: cmake_install.cmake  glfwinfo  msaa
MartinDemo/lib/glfw/tests/empty.app/Contents/MacOS/: empty
MartinDemo/lib/glfw/tests/icon.app/Contents/MacOS/: icon
MartinDemo/lib/glfw/tests/joysticks.app/Contents/MacOS/: joysticks
MartinDemo/lib/glfw/tests/tearing.app/Contents/MacOS/: tearing
MartinDemo/lib/glfw/tests/timeout.app/Contents/MacOS/: timeout
MartinDemo/lib/glfw/tests/title.app/Contents/MacOS/: title
src/: demo.c
(+21 files in other folders)
